# livekit-intervention-poc-with-sip-trunk

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: AUDIO-RECORDING.md  CONFIGURE_TWILIO_LIVEKIT_SIP_TRUNK.md  DAY3-FINDINGS.md  DEPLOYMENT.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: main.ts  takeover.ts  transcript.ts
scripts/: end_call.py  list_rooms.py  place_call.py  provision_sip_trunk.py  start.sh  stop.sh
src/: tracing.py  worker.py
src/agents/: basics_agent.py  coverage_agent.py  shared.py  takeover.py
src/server/: main.py  tokens.py
