[project]
name = "livekit-spike"
version = "0.0.1"
requires-python = ">=3.12,<3.13"
dependencies = [
    "livekit-agents[silero,turn-detector]==1.5.8",
    "livekit-plugins-openai==1.5.8",
    "livekit-plugins-google==1.5.8",
    "livekit-plugins-deepgram==1.5.8",
    "livekit-plugins-cartesia==1.5.8",
    "livekit-api>=0.8.0",
    "livekit>=0.20.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.9.0",
]

[project.optional-dependencies]
tracing = [
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0",
]

[tool.uv]
package = false
